Battle engine in the works .. kinda

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,14 +22,14 @@
 
         <%= f.label :avatar %> <br />
           <div class="col-md-12">
-            <p class="col-md-3"><%= image_tag("avatar/avatar_1.gif") %> Trainer 1 <%= f.radio_button :avatar, "1" %> </p>
-            <p class="col-md-3"><%= image_tag("avatar/avatar_2.gif") %> Trainer 2 <%= f.radio_button :avatar, "2" %> </p>
-            <p class="col-md-3"><%= image_tag("avatar/avatar_3.gif") %> Trainer 3 <%= f.radio_button :avatar, "3" %> </p>
-            <p class="col-md-3"><%= image_tag("avatar/avatar_4.gif") %> Trainer 4 <%= f.radio_button :avatar, "4" %> </p>
-            <p class="col-md-3"><%= image_tag("avatar/avatar_5.gif") %> Trainer 5 <%= f.radio_button :avatar, "5" %> </p>
-            <p class="col-md-3"><%= image_tag("avatar/avatar_6.gif") %> Trainer 6 <%= f.radio_button :avatar, "6" %> </p>
-            <p class="col-md-3"><%= image_tag("avatar/avatar_7.gif") %> Trainer 7 <%= f.radio_button :avatar, "7" %> </p>
-            <p class="col-md-3"><%= image_tag("avatar/avatar_8.gif") %> Trainer 8 <%= f.radio_button :avatar, "8" %> </p>
+            <p class="col-md-3"><%= image_tag("avatar/avatar_1.gif") %> Trainer 1 <%= f.radio_button :avatar, "avatar_1" %> </p>
+            <p class="col-md-3"><%= image_tag("avatar/avatar_2.gif") %> Trainer 2 <%= f.radio_button :avatar, "avatar_2" %> </p>
+            <p class="col-md-3"><%= image_tag("avatar/avatar_3.gif") %> Trainer 3 <%= f.radio_button :avatar, "avatar_3" %> </p>
+            <p class="col-md-3"><%= image_tag("avatar/avatar_4.gif") %> Trainer 4 <%= f.radio_button :avatar, "avatar_4" %> </p>
+            <p class="col-md-3"><%= image_tag("avatar/avatar_5.gif") %> Trainer 5 <%= f.radio_button :avatar, "avatar_5" %> </p>
+            <p class="col-md-3"><%= image_tag("avatar/avatar_6.gif") %> Trainer 6 <%= f.radio_button :avatar, "avatar_6" %> </p>
+            <p class="col-md-3"><%= image_tag("avatar/avatar_7.gif") %> Trainer 7 <%= f.radio_button :avatar, "avatar_7" %> </p>
+            <p class="col-md-3"><%= image_tag("avatar/avatar_8.gif") %> Trainer 8 <%= f.radio_button :avatar, "avatar_8" %> </p>
           </div>
         </div>
 
