--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -6,18 +6,7 @@
 <div class="container text-center">
 <div>
 	<div class="col-md-4">
-		<pre>Map # 1 Goes Here </pre>
-	</div>
-	<div class="col-md-4">
-		<pre>Map # 2 Goes Here </pre>
-	</div>
-	<div class="col-md-4">
-		<pre>Map # 3 Goes Here </pre>
-	</div>
-</div>
-<div>
-	<div class="col-md-4">
-		<pre>Map # 1 Goes Here </pre>
+		<pre><%= link_to "Map 1", game_map_path %></pre>
 	</div>
 	<div class="col-md-4">
 		<pre>Map # 2 Goes Here </pre>
