--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,6 +18,26 @@ pre {
   font-size: 11px;
 }
 
+
+table, tr, td, thead, tbody {
+  padding: 10px;
+  margin: 10px 10px 10px 10px;
+  text-align: left;
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  background-color: #4CAF50;
+  color: white;
+  padding: 5px;
+}
+
+tr:hover {background-color: #f5f5f5}
+
+
 a {
   color: #000;
 
@@ -35,6 +55,11 @@ div {
   &.field, &.actions {
     margin-bottom: 10px;
   }
+}
+
+footer{
+  position: absolute;
+  bottom: 15%;
 }
 
 #notice {
