--- a/app/views/game/map.html.erb
+++ b/app/views/game/map.html.erb
@@ -6,8 +6,9 @@
           style="background:rgb(233,233,233); float: left"> FAILED TO CANVAS BRO! Try a diffferent browser or something!
   </canvas>
 </div>
-<div id="battleDIV" style="float: left; margin-left: 5%; height: 500px; width: 257px; background-repeat: no-repeat"> Loading ...
-  <input id="catchBTN" type="submit" value="Catch" style="visibility: hidden" onclick="catchPokemon()"/>
+<div id="battleDIV" style="float: left; margin-left: 5%; height: 500px; width: 257px; background-repeat: no-repeat">
+  Loading ...
+
 </div>
 
 <script>
@@ -34,7 +35,36 @@
   var starterID;
 
   function catchPokemon() {
-    document.getElementById("catchBTN").style.visibility = "none";
+    var http = new XMLHttpRequest();
+    var url = "http://localhost:3000/game/caughtPokemon";
+    var para = pokemon_number + 1;
+    http.open("GET", url, true);
+
+    //Send the proper header information along with the request
+    //http.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+    //http.setRequestHeader("Content-length", "1");
+    //http.setRequestHeader("Connection", "close");
+
+    http.onreadystatechange = function () {//Call a function when the state changes.
+      if (http.readyState == 4 && http.status == 200) {
+        alert(http.responseText);
+      }
+    }
+    http.send(para);
+    alert("sent");
+
+    //get Pokemon Data
+    var xh = new XMLHttpRequest();
+
+    xh.onreadystatechange = function () {
+      if (xh.readyState == 4 && xh.status == 200) {
+        myTeam = JSON.parse(xh.responseText);
+      }
+    };
+    xh.open("POST", url, true);
+    xh.send();
+    //end get team
+
   }
   function startBattle() {
 
@@ -45,7 +75,8 @@
 
     document.getElementById('battleDIV').innerHTML = "" +
         "<p><img style='float: right;' src='/images/front/normal/" + (pokemon_number + 1) + ".png'><br/><br/><br/></p>" +
-        "<img src='/images/back/normal/" + (starterID) + ".png'>";
+        "<img src='/images/back/normal/" + (starterID) + ".png'>" +
+        "<br/><input id='catchBTN' type='submit' value='Catch' onclick='catchPokemon()'/>";
     document.getElementById('battleDIV').style.backgroundImage = "url('/images/battlescene/scene.png')";
 
   }
