--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -6,13 +6,13 @@
 <div class="container text-center">
 <div>
 	<div class="col-md-4">
-		<pre><%= link_to "Map 1", game_map_path %></pre>
+		<pre><%= link_to image_tag("/images/maps/map3.png", size: "320x240" ), game_map_path %></pre>
 	</div>
 	<div class="col-md-4">
-		<pre>Map # 2 Goes Here </pre>
+		<pre>Map #2</pre>
 	</div>
 	<div class="col-md-4">
-		<pre>Map # 3 Goes Here </pre>
+		<pre>Map #3</pre>
 	</div>
 </div>
 </div>
