--- a/app/views/game/map.html.erb
+++ b/app/views/game/map.html.erb
@@ -34,37 +34,43 @@
   var myTeam;
   var starterID;
 
+
+  var catchRate=70;
+
   function catchPokemon() {
-    var http = new XMLHttpRequest();
     var url = "http://localhost:3000/game/caughtPokemon";
-    var para = pokemon_number + 1;
-    http.open("GET", url, true);
+    var params = "id="+(pokemon_number+1);
+    var http = new XMLHttpRequest();
 
-    //Send the proper header information along with the request
-    //http.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-    //http.setRequestHeader("Content-length", "1");
-    //http.setRequestHeader("Connection", "close");
-
-    http.onreadystatechange = function () {//Call a function when the state changes.
-      if (http.readyState == 4 && http.status == 200) {
-        alert(http.responseText);
+    http.open("GET", url+"?"+params, true);
+    http.onreadystatechange = function()
+    {
+      if(http.readyState == 4 && http.status == 200) {
+        alert("You succesfully caught the Pokemon!")
+        document.getElementById('battleDIV').innerHTML = "Keep walking around to catch em all!";
+        document.getElementById('battleDIV').style.backgroundImage ="";
       }
     }
-    http.send(para);
-    alert("sent");
 
-    //get Pokemon Data
-    var xh = new XMLHttpRequest();
+    var didICatchIt = Math.floor(Math.random() * 100) + 1;
+    if(didICatchIt < catchRate){
+      http.send(null);
+      alert("Congrats! You caught it!!!");
+    } else {
+      alert("Oooh so close! Try again!");
+    }
 
-    xh.onreadystatechange = function () {
-      if (xh.readyState == 4 && xh.status == 200) {
-        myTeam = JSON.parse(xh.responseText);
-      }
-    };
-    xh.open("POST", url, true);
-    xh.send();
-    //end get team
 
+  }
+
+  function notifyEating(){
+    alert("The pokemon ate your poffin! It is distracted!")
+    catchRate=catchRate+5;
+  }
+
+  function notifyMad(){
+    alert("The pokemon's face was pelted with a rock! It looks mad!")
+    catchRate=catchRate-5;
   }
   function startBattle() {
 
@@ -76,11 +82,24 @@
     document.getElementById('battleDIV').innerHTML = "" +
         "<p><img style='float: right;' src='/images/front/normal/" + (pokemon_number + 1) + ".png'><br/><br/><br/></p>" +
         "<img src='/images/back/normal/" + (starterID) + ".png'>" +
-        "<br/><input id='catchBTN' type='submit' value='Catch' onclick='catchPokemon()'/>";
+        "<br/><input id='catchBTN' type='submit' value='Catch' onclick='catchPokemon()'/>" +
+        "<input id='baitBTN' type='submit' value='Bait' onclick='notifyEating()'/>" +
+        "<input id='rockBTN' type='submit' value='Rock' onclick='notifyMad()'/>";
     document.getElementById('battleDIV').style.backgroundImage = "url('/images/battlescene/scene.png')";
 
   }
   function encounterBattle() {
+
+
+    //end Get Avatar Data
+    var xp = new XMLHttpRequest();
+    var url = "http://localhost:3000/game/add5Money";
+    xp.open("GET", url, true);
+    xp.send();
+    //end Get Avatar Data
+
+
+
     document.getElementById('battleDIV').style.backgroundImage = "";
 
     encounter_odds = Math.floor(Math.random() * 100) + 1;
@@ -151,7 +170,7 @@
 
     //end Get Avatar Data
     var xhttp = new XMLHttpRequest();
-    var url = "http://localhost:3000/game/trainerIcon";
+    var url10 = "http://localhost:3000/game/trainerIcon";
 
     xhttp.onreadystatechange = function () {
       if (xhttp.readyState == 4 && xhttp.status == 200) {
@@ -160,7 +179,7 @@
         tile1.src = "/images/avatar_" + myIcon + ".gif";
       }
     };
-    xhttp.open("GET", url, true);
+    xhttp.open("GET", url10, true);
     xhttp.send();
     //end Get Avatar Data
 
